...
          }
          .onDelete { indexSet in
            receiptStore.receipts.remove(atOffsets: indexSet)
          }
        }
        .listStyle(.plain)
        .navigationTitle("All Receipts")
        .toolbar {
          ToolbarItemGroup {
            EditButton()
            Image(systemName: "exclamationmark.bubble")
              .foregroundColor(Color.blue)
              .onTapGesture {
...
